--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,11 @@ h1.temp {
     margin-bottom: 0.4em;
 }
 
+.flex {
+    display: flex;
+    align-items: center;
+}
+
 .description {
     text-transform: capitalize;
     margin-left: 8px;
@@ -35,4 +40,8 @@ h1.temp {
 
 .card:hover {
     box-shadow: 5px 5px 5px #00000056;
+}
+
+.icon {
+    width: 50px;
 }
